--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-
-    <a href="recipes/Chef John's American Goulash.html"
-      >Chef John's American Goulash</a
-    >
+    <ul>
+      <li>
+        <a href="recipes/Chef John's American Goulash.html"
+          >Chef John's American Goulash</a
+        >
+      </li>
+      <li>
+        <a href="recipes/Hawaiian Sausage Skillet.html"
+          >Hawaiian Sausage Skillet</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
