Complete Romantic Chicken with Artichokes and Mushrooms document

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
           >Hawaiian Sausage Skillet</a
         >
       </li>
+      <li>
+        <a href="recipes/Romantic Chicken with Artichokes and Mushrooms.html"
+          >Romantic Chicken with Artichokes and Mushrooms</a
+        >
+      </li>
     </ul>
   </body>
 </html>
